# windows-terminal-theme-generator

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  Trunk.toml  index.html  robots.txt  sitemap.xml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
docs/: import_export.md
src/: generate.rs  home_page.rs  main.rs  router.rs  style.scss  utils.rs
src/assets/font/: font_face.scss
src/assets/json/: button_gen_text.json  home_page.json
src/assets/styles/: color_gen.scss  information_buttons.scss  vars.scss
src/colors/: colors.rs
src/components/: alerts.rs  ascii_browsers.rs  buttons.rs  colortool.rs  footer.rs  icons.rs  mod.rs  tool_wrapper.rs
